tests-integration/fixtures/checking/1772565300_derive_bifunctor_insufficient_params/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Triple ::
  forall (@a :: Type) (@b :: Type) (@c :: Type).
    (a :: Type) -> (b :: Type) -> (c :: Type) -> Triple (a :: Type) (b :: Type) (c :: Type)

Types
Triple :: Type -> Type -> Type -> Type

Derived
derive Bifunctor (Triple Int String)

Roles
Triple = [Representational, Representational, Representational]

Diagnostics
error[CannotUnify]: Cannot unify 'Type' with 'Type -> Type'
  --> 6:27..6:46
  |
6 | derive instance Bifunctor (Triple Int String)
  |                           ^~~~~~~~~~~~~~~~~~~
error[CannotDeriveForType]: Cannot derive for type: Triple Int String
  --> 6:1..6:46
  |
6 | derive instance Bifunctor (Triple Int String)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
